--- a/metadata.yaml
+++ b/metadata.yaml
@@ -19,6 +19,8 @@ language: en
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'South Africa and the Transvaal War, vol. 7
 
   The Guerilla War, from February 1901 to the Conclusion of Hostilities'
